--- a/app/src/main/res/layout/upgrade_item.xml
+++ b/app/src/main/res/layout/upgrade_item.xml
@@ -1,76 +1,114 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="400dp"
     android:layout_marginHorizontal="10dp"
     android:layout_marginBottom="10dp"
-    app:cardCornerRadius="20dp"
-    android:layout_height="200dp">
+    app:cardCornerRadius="20dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#1C0A6C"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0"
-            app:srcCompat="@drawable/miner" />
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginEnd="10dp"
-            android:layout_weight="0"
-            android:orientation="vertical">
+            android:layout_height="200dp"
+            android:background="#1C0A6C"
+            android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/upgradeTitle"
-                android:layout_width="match_parent"
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="150dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:fontFamily="@font/alegreya_sans_sc_bold"
-                android:gravity="center"
-                android:text="Title"
-                android:textColor="@color/white"
-                android:textSize="24sp" />
+                android:layout_weight="0"
+                app:srcCompat="@drawable/miner" />
 
-            <TextView
-                android:id="@+id/upgradeAmount"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:fontFamily="@font/alegreya_sans_sc_bold"
-                android:gravity="center"
-                android:text="Price"
-                android:textColor="@color/white"
-                android:textSize="20sp" />
+                android:layout_height="match_parent"
+                android:layout_marginEnd="10dp"
+                android:layout_weight="0"
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/upgradeOwned"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:fontFamily="@font/alegreya_sans_sc_bold"
-                android:gravity="center"
-                android:text="Owned: "
-                android:textColor="@color/white"
-                android:textSize="14sp" />
+                <TextView
+                    android:id="@+id/upgradeTitle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:fontFamily="@font/alegreya_sans_sc_bold"
+                    android:gravity="center"
+                    android:text="Title"
+                    android:textColor="@color/white"
+                    android:textSize="24sp" />
 
-            <Button
-                android:backgroundTint="#2E0F3C"
-                android:id="@+id/upgradeButton"
-                android:layout_width="125dp"
-                android:layout_height="60dp"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="20dp"
-                android:enabled="true"
-                android:text="Upgrade"
-                android:textSize="14sp" />
+                <TextView
+                    android:id="@+id/upgradeAmount"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:fontFamily="@font/alegreya_sans_sc_bold"
+                    android:gravity="center"
+                    android:text="Price"
+                    android:textColor="@color/white"
+                    android:textSize="20sp" />
 
+                <TextView
+                    android:id="@+id/upgradeOwned"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:fontFamily="@font/alegreya_sans_sc_bold"
+                    android:gravity="center"
+                    android:text="Owned: "
+                    android:textColor="@color/white"
+                    android:textSize="14sp" />
+
+                <Button
+                    android:id="@+id/upgradeButton"
+                    android:layout_width="125dp"
+                    android:layout_height="60dp"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="20dp"
+                    android:backgroundTint="#2E0F3C"
+                    android:enabled="true"
+                    android:text="Upgrade"
+                    android:textSize="14sp" />
+
+            </LinearLayout>
         </LinearLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constLayout"
+            android:background="#1C0A6C"
+            android:layout_width="match_parent"
+            android:layout_height="200dp">
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="10dp"
+                app:cardCornerRadius="20dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" >
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:background="#808080"
+                    android:id="@+id/constLayout2"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </androidx.cardview.widget.CardView>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
     </LinearLayout>
+
 </androidx.cardview.widget.CardView>
